@@ -1,3 +1,11 @@
+2023-09-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Add Python for dependency.
+	Add new CMake variable 'buildaux_dir'.
+	Remove NLS Util in C++.
+	Fix typos in 'toold/getlocale.cpp'.
+	Rename NLS Util from 'nls-util' to 'nls_util' for snake_case.
+
 2023-09-23	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Update NLS Util's filename format.
